add build logic