@@ -1,9 +1,6 @@
-import com.android.build.gradle.internal.tasks.factory.dependsOn
-
 plugins {
     alias(libs.plugins.kotlinJvm)
     alias(libs.plugins.kotlinBuildConfig)
-    id("me.champeau.jmh") version "0.7.3"
 }
 
 group = "com.storyteller_f.a.backend"
@@ -26,14 +23,3 @@ tasks.test {
 kotlin {
     jvmToolchain(21)
 }
-
-tasks.withType<Test> {
-    jvmArgs = listOf("--add-modules", "jdk.incubator.vector")
-}
-
-jmh {
-    warmupIterations = 2
-    iterations = 2
-    fork = 2
-}
-
